--- a/styles/main.css
+++ b/styles/main.css
@@ -108,6 +108,11 @@ button {
     border: 1px solid grey;
 }
 
+.read {
+    border: 1px solid rgb(37, 192, 133);
+    color: rgb(37, 192, 133);
+}
+
 .delete {
     border: 1px solid rgb(238, 107, 107);
     color:rgb(238, 107, 107);
